--- a/public/css/partial/responsive.css
+++ b/public/css/partial/responsive.css
@@ -57,6 +57,17 @@
         padding:2rem;
         margin:0rem;
     }
-  
+    .site-main .subscribe-me-area .subscribe {
+        padding: 3rem 0;
+        
+    }
+    .site-main .subscribe-me-area .subscribe h4{
+        font-size:22px;
+    
+    }
+    .site-main .footer-area .para{
+        font-size: 10px;
+        opacity:0.7;
+    }
    
 }
