--- a/views/main.ejs
+++ b/views/main.ejs
@@ -70,7 +70,7 @@
                     onclick="this.form.submit()">Hire me</button>
 
                   <button type="button" class="btn button secondary-button  text-uppercase "
-                    onclick="location.href='https://docs.google.com/document/d/1f8Dn3LmoMhwPGqUY4RCaAAoh57m3Ff8T4eNeAxitee4/edit?usp=sharing';">get cv</button>
+                    onclick="location.href='./resume'">get cv</button>
             </form>
           </div>
         </div>
